...
                            <constraint firstItem="Kfc-kn-Uwd" firstAttribute="leading" secondItem="0rg-hF-RFh" secondAttribute="leading" constant="16" id="Vks-55-GPn"/>
                            <constraint firstItem="Kfc-kn-Uwd" firstAttribute="top" secondItem="0rg-hF-RFh" secondAttribute="top" id="WTr-Qn-BaG"/>
                            <constraint firstItem="Mn7-Zb-z3g" firstAttribute="top" secondItem="Kfc-kn-Uwd" secondAttribute="bottom" id="b6G-ak-GK0"/>
                            <constraint firstItem="Mn7-Zb-z3g" firstAttribute="leading" secondItem="0rg-hF-RFh" secondAttribute="leading" constant="16" id="oEH-g1-0TX"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Items" id="hnf-mI-3iS">
                        <barButtonItem key="rightBarButtonItem" title="toggleSearch" image="magnifyingglass" catalog="system" id="aMW-yL-td7">
                            <connections>
                                <action selector="toggleSearch:" destination="sqz-j2-hWx" id="eDV-Jc-3Gq"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
